--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/tvJogo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="70dp"
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tvNick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
@@ -49,7 +49,7 @@
             android:textSize="20sp" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/etNick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/tvAvatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="153dp"
@@ -85,18 +85,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/imageView7"
+        <ImageButton
+            android:id="@+id/ibCoala"
             android:layout_width="188dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="17dp"
             app:srcCompat="@drawable/coala" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="188dp"
-            android:layout_height="164dp"
-            android:scaleType="centerInside"
+        <ImageButton
+            android:id="@+id/ibFlamingo"
+            android:layout_width="173dp"
+            android:layout_height="124dp"
+            android:layout_marginLeft="17dp"
             app:srcCompat="@drawable/flamingo" />
 
     </TableRow>
@@ -105,18 +105,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="188dp"
-            android:layout_height="158dp"
-            android:layout_marginLeft="17dp"
+        <ImageButton
+            android:id="@+id/ibTouro"
+            android:layout_width="211dp"
+            android:layout_height="140dp"
             app:srcCompat="@drawable/touro" />
 
-        <ImageView
-            android:id="@+id/imageView6"
+        <ImageButton
+            android:id="@+id/ibCachorro"
             android:layout_width="188dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="17dp"
             app:srcCompat="@drawable/cachorro" />
+
     </TableRow>
 
     <TableRow
@@ -124,7 +125,7 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btJogar"
             android:layout_width="112dp"
             android:layout_height="63dp"
             android:layout_marginLeft="150dp"
