--- a/app/src/main/res/layout/activity_tela_jogo.xml
+++ b/app/src/main/res/layout/activity_tela_jogo.xml
@@ -37,10 +37,10 @@
             tools:layout_editor_absoluteY="53dp" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvPalavraSorteada"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="time"
+            android:text="Palavra Sorteada Aleatoriamente"
             tools:layout_editor_absoluteX="159dp"
             tools:layout_editor_absoluteY="107dp" />
 
