--- a/app/src/main/res/layout/activity_inserir_palavras.xml
+++ b/app/src/main/res/layout/activity_inserir_palavras.xml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <Button
-        android:id="@+id/btInserir"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="INSERIR"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="357dp" />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/etNovaPalavra"
@@ -21,4 +14,13 @@
         android:text="Nova Palavra"
         tools:layout_editor_absoluteX="102dp"
         tools:layout_editor_absoluteY="219dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/btInserir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="INSERIR"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="357dp" />
+
+</LinearLayout>
