--- a/app/src/main/res/layout/activity_tela_jogo.xml
+++ b/app/src/main/res/layout/activity_tela_jogo.xml
@@ -10,12 +10,22 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="102dp"
+            android:layout_height="94dp"
+            android:layout_marginLeft="20dp"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tvApelido"
             android:layout_width="76dp"
             android:layout_height="33dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="22dp"
             android:fontFamily="@font/amaranth"
             android:shadowColor="#3B406C"
             android:shadowDx="1"
@@ -27,26 +37,52 @@
             tools:layout_editor_absoluteX="167dp"
             tools:layout_editor_absoluteY="53dp" />
 
-        <TextView
-            android:id="@+id/tvPalavraSorteada"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Palavra Sorteada Aleatoriamente"
-            tools:layout_editor_absoluteX="159dp"
-            tools:layout_editor_absoluteY="107dp" />
-
         <Button
             android:id="@+id/btTeste"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="teste" />
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="#D31414"
+            android:fontFamily="@font/allerta"
+            android:shadowColor="#A35B5B"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="1"
+            android:text="@string/adicionar"
+            app:cornerRadius="@android:dimen/thumbnail_height" />
+
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:id="@+id/tvPalavraSorteada"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/palavraForca"
+            tools:layout_editor_absoluteX="159dp"
+            tools:layout_editor_absoluteY="107dp" />
 
         <TextView
             android:id="@+id/tvTimer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Timer" />
-
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/amaranth"
+            android:text="@string/timer"
+            android:textColor="#292E8E"
+            android:textSize="20dp" />
     </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
