--- a/app/src/main/res/layout/activity_tela_jogo.xml
+++ b/app/src/main/res/layout/activity_tela_jogo.xml
@@ -83,6 +83,63 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="141dp"
+            android:layout_height="407dp"
+            android:layout_marginLeft="10dp"
+            app:srcCompat="@drawable/forca" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="77dp"
+            android:layout_height="51dp"
+            android:layout_marginLeft="-67dp"
+            android:layout_marginTop="178dp"
+            app:srcCompat="@drawable/cabeca" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="99dp"
+            android:layout_height="115dp"
+            android:layout_marginLeft="-86.5dp"
+            android:layout_marginTop="208dp"
+            app:srcCompat="@drawable/corpo2" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="109dp"
+            android:layout_height="110dp"
+            android:layout_marginLeft="-83dp"
+            android:layout_marginTop="200dp"
+            app:srcCompat="@drawable/bracod" />
+
+        <ImageView
+            android:id="@+id/imageView10"
+            android:layout_width="96dp"
+            android:layout_height="95dp"
+            android:layout_marginLeft="-142dp"
+            android:layout_marginTop="205.5dp"
+            app:srcCompat="@drawable/bracoee" />
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="75dp"
+            android:layout_height="99dp"
+            android:layout_marginLeft="-54dp"
+            android:layout_marginTop="273.5dp"
+            app:srcCompat="@drawable/ped1" />
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="75dp"
+            android:layout_height="99dp"
+            android:layout_marginLeft="-105dp"
+            android:layout_marginTop="273.5dp"
+            app:srcCompat="@drawable/pee1" />
+
+    </TableRow>
 
 </LinearLayout>
