--- a/app/src/main/res/layout/activity_tela_jogo.xml
+++ b/app/src/main/res/layout/activity_tela_jogo.xml
@@ -2,20 +2,97 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ivAvatar"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".TelaJogo">
+
+    <GridLayout
+        android:id="@+id/gridLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:columnCount="10"
+        android:rowCount="6">
+
+        <Button
+            android:id="@+id/buttonQ"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:text="Q" />
+
+        <Button
+            android:id="@+id/buttonW"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:text="W" />
+
+        <Button
+            android:id="@+id/buttonE"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:text="E" />
+
+        <Button
+            android:id="@+id/buttonR"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:text="R" />
+
+        <Button
+            android:id="@+id/buttonT"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:text="T" />
+
+        <Button
+            android:id="@+id/buttonY"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:text="Y" />
+
+        <Button
+            android:id="@+id/buttonU"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="U" />
+
+        <Button
+            android:id="@+id/buttonI"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:text="I" />
+
+        <Button
+            android:id="@+id/buttonO"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:text="O" />
+
+        <Button
+            android:id="@+id/buttonP"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="P" />
+
+
+    </GridLayout>
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/ivAvatar"
+            android:layout_width="96dp"
+            android:layout_height="94dp"
+            android:visibility="visible"
+            tools:srcCompat="@tools:sample/avatars" />
+
         <TextView
             android:id="@+id/tvApelido"
-            android:layout_width="76dp"
-            android:layout_height="33dp"
+            android:layout_width="49dp"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/amaranth"
             android:shadowColor="#3B406C"
             android:shadowDx="1"
@@ -29,16 +106,16 @@
 
         <TextView
             android:id="@+id/tvPalavraSorteada"
-            android:layout_width="wrap_content"
+            android:layout_width="67dp"
             android:layout_height="wrap_content"
-            android:text="Palavra Sorteada Aleatoriamente"
+            android:text="Sorteada"
             tools:layout_editor_absoluteX="159dp"
             tools:layout_editor_absoluteY="107dp" />
 
         <Button
             android:id="@+id/btTeste"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="32dp"
             android:text="teste" />
 
         <TextView
