--- a/app/src/main/res/layout/activity_tela_jogo.xml
+++ b/app/src/main/res/layout/activity_tela_jogo.xml
@@ -98,6 +98,7 @@
             android:layout_height="51dp"
             android:layout_marginLeft="-67dp"
             android:layout_marginTop="178dp"
+            android:alpha="0"
             app:srcCompat="@drawable/cabeca" />
 
         <ImageView
@@ -106,6 +107,7 @@
             android:layout_height="115dp"
             android:layout_marginLeft="-86.5dp"
             android:layout_marginTop="208dp"
+            android:alpha="0"
             app:srcCompat="@drawable/corpo2" />
 
         <ImageView
@@ -114,6 +116,7 @@
             android:layout_height="110dp"
             android:layout_marginLeft="-83dp"
             android:layout_marginTop="200dp"
+            android:alpha="0"
             app:srcCompat="@drawable/bracod" />
 
         <ImageView
@@ -122,6 +125,7 @@
             android:layout_height="95dp"
             android:layout_marginLeft="-142dp"
             android:layout_marginTop="205.5dp"
+            android:alpha="0"
             app:srcCompat="@drawable/bracoee" />
 
         <ImageView
@@ -130,6 +134,7 @@
             android:layout_height="99dp"
             android:layout_marginLeft="-54dp"
             android:layout_marginTop="273.5dp"
+            android:alpha="0"
             app:srcCompat="@drawable/ped1" />
 
         <ImageView
@@ -138,10 +143,11 @@
             android:layout_height="99dp"
             android:layout_marginLeft="-105dp"
             android:layout_marginTop="273.5dp"
+            android:alpha="0"
             app:srcCompat="@drawable/pee1" />
 
         <EditText
-            android:id="@+id/etLetrasIncorretas"
+            android:id="@+id/etLetrasCorretas"
             android:layout_width="144dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="80dp"
